[workspace]
members = ["strava-wrapper", "strava-wrapper-macros", "integration-tests"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12.8", features = ["json", "multipart"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
async-trait = "0.1.83"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
httpmock = "0.8.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
