[package]
name = "strava-wrapper-macros"
description = "[WIP] Macros for the strava-wrapper package"
version = "0.0.2"
edition = "2021"
authors = ["Matt Barkway <contact@mattbarkway.dev>"]
license = "MIT"
repository = "https://github.com/MattBarkway/strava-wrapper"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
