[package]
name = "strava-wrapper-macros"
description = "Procedural macros for strava-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Matt Barkway <contact@mattbarkway.dev>"]
license = "MIT"
repository = "https://github.com/MattBarkway/strava-wrapper"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
