[package]
name = "strava-wrapper"
description = "[WIP] A Rust wrapper for the Strava API"
version = "0.0.1"
edition = "2021"
authors = ["Matt Barkway <contact@mattbarkway.dev>"]
license = "MIT"
repository = "https://github.com/MattBarkway/strava-wrapper"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
async-trait = "0.1.83"
strava-wrapper-macros = { version = "0.1", path = "../strava-wrapper-macros" }
chrono = { version = "0.4.42", features = ["serde"] }
