[package]
name = "strava-wrapper"
description = "A Rust wrapper for the Strava API"
version = "0.1.0"
edition = "2021"
authors = ["Matt Barkway <contact@mattbarkway.dev>"]
license = "MIT"
repository = "https://github.com/MattBarkway/strava-wrapper"
readme = "../README.md"
rust-version = "1.70"
categories = ["api-bindings", "web-programming::http-client"]
keywords = ["strava", "api", "wrapper", "async"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
strava-wrapper-macros = { version = "0.1.0", path = "../strava-wrapper-macros" }
